<resources>
    <string name="app_name">iEvents</string>
    <string name="UpperFriends">FRIENDS</string>
    <string name="Decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="Friends">Friends</string>
    <string name="FRIENDSREQUESTS">FRIEND REQUESTS</string>
    <string name="Users">Users</string>
    <string name="Requests">Requests</string>
    <string name="Signout">Signout</string>
    <string name="Signin">Sign in</string>
    <string name="Signinplzw">Sign in Please Wait</string>
    <string name="Signupplzw">Sign up Please Wait</string>
    <string name="Signup">Sign up</string>
    <string name="Chat">Chat</string>
    <string name="notgrantaccesstok">Access token not granted</string>
    <string name="EVENTPARTICIPANTSUSERS">EVENT PARTICIPANTS USERS</string>
    <string name="NOTATTENDEVENT">You are not attending the event</string>
    <string name="ATTENDINGEVENT">You are attending the event</string>
    <string name="getbestevent">Getting best events\nPlease wait</string>
    <string name="delfrndreq">Deleting friend request\nPlease wait</string>
    <string name="getevents">Getting events\nPlease wait</string>
    <string name="createevent">Creating event\nPlease wait</string>
    <string name="obtainamigos">Getting friends\nPlease wait</string>
    <string name="obtaindata">Getting data\nPlease wait</string>
    <string name="obtainusers">Getting users\nPlease wait</string>
    <string name="obtainmessag">Getting messages\nPlease wait</string>
    <string name="sendmessag">Sending message\nPlease wait</string>
    <string name="sendeventattendreq">Sending event attend request\nPlease wait</string>
    <string name="sendmfq">Sending friend request\nPlease wait</string>
    <string name="acceptfrdreqplzw">Accepting friend request\nPlease wait</string>
    <string name="eventdropreqplzw">Sending event drop request\nPlease wait</string>
    <string name="successful_sendmess">Message sent successfully</string>
    <string name="Writemessfirst">Write message first</string>
    <string name="obtaineventparticip">Getting event participants\nPlease wait</string>
    <string name="Create_Event">Create Event</string>
    <string name="Getallevents">Get all events</string>
    <string name="Searchforevent">Search for event</string>
    <string name="GetBestEvent">Get the best events</string>
    <string name="ProfileUpdate">Profile Update</string>
    <string name="ID_first">Please enter ID first</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="successful_signin">Signed in successfully</string>
    <string name="successful_signup">Signed up successfully</string>
    <string name="updatesucc">Updated successfully</string>
    <string name="succacc">Accepted Successfully</string>
    <string name="succdel">Deleted Successfully</string>
    <string name="succsend">Sent Successfully</string>
    <string name="eventattnsuccss">Event attend Successfully</string>
    <string name="eventdropsuccss">Event drop Successfully</string>

    <string name="Openchat">Open Chat</string>
    <string name="imgurl">img url</string>
    <string name="usernoexistwithemailandpass">A user does not exist with that email and password</string>
    <string name="firstname">first name</string>
    <string name="lastname">last name</string>
    <string name="Update">Update</string>
    <string name="Updatingplzw">Updating Please Wait</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="eventcreatesucc">Event created successfully</string>
    <string name="eventtype">event type</string>
    <string name="eventname">event name</string>
    <string name="Plzentkeyword">Enter parameters first.</string>
    <string name="noeventsfound">No events found.</string>
    <string name="gettingeventinfo">Getting event info</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="eventstartdate">event start date</string>
    <string name="eventenddate">event end date</string>
    <string name="CHAT_USERS">CHAT_USERS</string>
    <string name="typehere">type here</string>
    <string name="keyword">keyword</string>
    <string name="Send">Send</string>
    <string name="Event_id">Event id</string>
    <string name="AllEvents">All Events</string>
    <string name="Eventinfo">Event info</string>
    <string name="SearchEvent">Search Event</string>
    <string name="DropEvent">Drop Event</string>
    <string name="Reject">Reject</string>
    <string name="Profile">Profile</string>
    <string name="SendFriendRequest">Send Friend Request</string>
    <string name="Seeparticipants">See participants</string>
    <string name="Attendevent">Attend event</string>
    <string name="SpecificandSearchEvent">Specific and Search Event</string>
    <string name="SearchSpecificeventbyID">Search Specific event by ID</string>
    <string name="noofparticipants">no of participants</string>
    <string name="date">date</string>
    <string name="sendfrendreq">Send Friend Request</string>
    <string name="profile_picture_desc">profile picture</string>
    <string name="event_image_desc">event image</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="modify_event">Modify event</string>
    <string name="profile_picture">profile picture</string>
    <string name="event_info">Event info</string>
    <string name="see_participants">See participants</string>

</resources>