<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".SigninActivity">

    <EditText
        android:id="@+id/signin_et_password"
        android:background="@drawable/edit_text_rounded"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn_signin"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signin_btn_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/Signin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signin_et_email"
        android:background="@drawable/edit_text_rounded"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signin_et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signin_et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

</androidx.constraintlayout.widget.ConstraintLayout>